deploy/k8s/deployment.yaml
# golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios-back
  template:
    metadata:
      labels:
        app: usuarios-back
    spec:
      containers:
      - name: usuarios-back
        image: gcr.io/annular-form-401215/gcr-alpine:{GITHUB_SHA}
        ports:
        - containerPort: 1212
        resources:
          # You must specify requests for CPU to autoscale
          # based on CPU utilization
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
      volumes:
      - name: env-volume
        secret:
          secretName: google-application-credentials
