deploy/k8s/service.yaml
#golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-back
spec:
  selector:
    app: usuarios-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1212
  type: ClusterIP
