deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prueba
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: prueba.tisw.cl
    http:
      paths:
      - backend:
          service:
            name: golang-service
            port:
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - prueba.tisw.cl
    secretName: prueba-secret
